@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.yura.domination"
       android:versionCode="3"
-      android:versionName="1.1.0.9"
+      android:versionName="1.1.1.0"
       android:installLocation="preferExternal">
       
     <!-- android:targetSdkVersion needs to be 11 to hide the legacy menu button -->
