@@ -19,6 +19,8 @@ CURRENT VERSION:
 		  save and undo icons added
 		  RadioButton hack added to make startgame button more visible
 		  DONE - PicturePanel should not use defualt font as it changes with dpi, should be a fixed size
+		  fixed - WARNING: trying to set a transparent color: 0
+		  fixed - on tablet the segmented control for the map views needs extra padding
 	Android 2 MapStore sprite wrong size on ldpi fix
 	Android 1 DONE - layout attack dialog fully
 
